[project]
name = "twilog-search"
version = "0.1.0"
description = "Twilog export data processing pipeline for vector and tag-based search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "llm7shi",
    "pandas>=2.3.0",
    "protobuf>=6.31.1",
    "rich>=14.0.0",
    "safetensors>=0.5.3",
    "sentence-transformers>=5.0.0",
    "sentencepiece>=0.2.0",
    "simple-term-menu>=1.6.6",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
llm7shi = { git = "https://github.com/7shi/llm7shi.git" }
